Pasarela de pago en cart y membresia, seeds, flujo Cart, Cron de membresia, detalles extras, archivo asociaciones
